Everything I have done since Heartland and GKC, including pathplanner, multiple paths, PID loops for shooter pivot positions, and other small tweaks and changes

--- a/TheLaw2457_Crescendo/.pathplanner/settings.json
+++ b/TheLaw2457_Crescendo/.pathplanner/settings.json
@@ -3,6 +3,7 @@
   "robotLength": 0.9144,
   "holonomicMode": true,
   "pathFolders": [
+    "ahhhhhhhhhhh",
     "subwoofer_4_piece"
   ],
   "autoFolders": [],
